[tool.poetry]
name = "richenum"
version = "2.0.3"
description = "Enum library for python."
authors = ["Hearsay Social <opensource@hearsaysocial.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hearsaycorp/richenum"
repository = "https://github.com/hearsaycorp/richenum"
keywords = ["python", "enum", "richenum"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "richenum", from = "src"}]
include = ["LICENSE.txt", "AUTHORS.rst", "CHANGELOG.rst"]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]